--- a/app/assets/stylesheets/pages/search.css.scss
+++ b/app/assets/stylesheets/pages/search.css.scss
@@ -15,6 +15,10 @@ body.search {
       margin-top: 10px;
       margin-left: 0px;
     }
+
+    .checkbox.pull-right {
+      float: right;
+    }
   }
 
   &#search-translations {
