--- a/app/views/home/_headers.slim
+++ b/app/views/home/_headers.slim
@@ -13,7 +13,7 @@
 /    limitations under the License.
 
 / Requires the following local variables:
-/   - `item_type`. Can be 'commit' or 'article'.
+/   - `item_type`. Can be 'commit', 'article' or 'group'.
 
 tr
   / Project Status
