--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -2,108 +2,119 @@
   <!-- TRANSLATION SIDE -->
   <div class="row">
     <div class="eight columns left">
-      <div class="translation-side">
-        <textarea class="translation-area {{status}}">{{translation_copy}}</textarea>
+      <div class="translation-side {{read_only_mode}}">
+        <textarea class="translation-area {{status}} {{read_only_mode}}" {{translation_editing_status}}>{{translation_copy}}</textarea>
 
-        {{#multi_updateable_translations_and_locale_associations.0}}
-          <div class="controls multi-updateable-translations-wrapper muted">
-            <div class="copy-to-label">Copy to:</div>
-            <div class="multi-updateable-translations">
-              {{#multi_updateable_translations_and_locale_associations}}
-                <div class="multi-updateable-translation">
-                  <input type="checkbox" value="{{translation.rfc5646_locale}}"
-                    {{#locale_association}}
-                      {{#checked}}checked{{/checked}}
-                      {{#uncheck_disabled}}disabled{{/uncheck_disabled}}
-                    {{/locale_association}}>
-                    {{#translation}}
-                      <a href="{{edit_path}}" target="_blank" class="muted {{status}}">
-                        <div>{{rfc5646_locale}}</div>
-                        {{#similarity}}<div class='similarity'>{{similarity}}</div>{{/similarity}}
-                      </a>
-                    {{/translation}}
-                  </input>
-                </div>
-              {{/multi_updateable_translations_and_locale_associations}}
+        {{^read_only_mode}}
+          {{#multi_updateable_translations_and_locale_associations.0}}
+            <div class="controls multi-updateable-translations-wrapper muted">
+              <div class="copy-to-label">Copy to:</div>
+              <div class="multi-updateable-translations">
+                {{#multi_updateable_translations_and_locale_associations}}
+                  <div class="multi-updateable-translation">
+                    <input type="checkbox" value="{{translation.rfc5646_locale}}"
+                      {{#locale_association}}
+                        {{#checked}}checked{{/checked}}
+                        {{#uncheck_disabled}}disabled{{/uncheck_disabled}}
+                      {{/locale_association}}>
+                      {{#translation}}
+                        <a href="{{edit_path}}" target="_blank" class="muted {{status}}">
+                          <div>{{rfc5646_locale}}</div>
+                          {{#similarity}}<div class='similarity'>{{similarity}}</div>{{/similarity}}
+                        </a>
+                      {{/translation}}
+                    </input>
+                  </div>
+                {{/multi_updateable_translations_and_locale_associations}}
+              </div>
             </div>
+          {{/multi_updateable_translations_and_locale_associations.0}}
+
+          <button class="small default copy-source">Copy from source</button>
+
+          <span class="controls">
+            <button class="default square expand-link">
+              <i class="fa fa-pencil-square-o"></i>
+            </button>
+          </span>
+        {{/read_only_mode}}
+
+        {{#is_shared}}
+          <span class="controls">
+            <div class="share-icon"/>
+          </span>
+        {{/is_shared}}
+
+        {{^read_only_mode}}
+          <div class="notes">
+            <div class="half tips"></div>
+            <div class="half alerts"></div>
           </div>
-        {{/multi_updateable_translations_and_locale_associations.0}}
 
-        <button class="small default copy-source">Copy from source</button>
-
-        <span class="controls">
-          <button class="default square expand-link">
-            <i class="fa fa-pencil-square-o"></i>
-          </button>
-        </span>
-
-        <div class="notes">
-          <div class="half tips"></div>
-          <div class="half alerts"></div>
-        </div>
-
-        {{#reasons}}
-          <span class="badge badge-secondary saved" data-checkbox="{{id}}">{{text}}</span>
-        {{/reasons}}
+          {{#reasons}}
+            <span class="badge badge-secondary saved" data-checkbox="{{id}}">{{text}}</span>
+          {{/reasons}}
+        {{/read_only_mode}}
       </div>
     </div>
 
     <!-- INFO SIDE -->
     <div class="eight columns right">
-      <div class="info-side">
+      <div class="info-side {{read_only_mode}}">
         <p class="source-copy">{{{source_copy}}}</p>
 
-        <dl class="additional-info">
+        {{^read_only_mode}}
+          <dl class="additional-info">
 
-          {{#context}}
-            <div class="item context">
-              <dt> Context </dt>
-              <dd>{{context}}</dd>
-            </div>
-          {{/context}}
-
-          {{#article_name}}
-              <div class="item">
-                <dt> Article </dt>
-                <dd> <a href="{{article_url}}">{{article_name}}</a> </dd>
+            {{#context}}
+              <div class="item context">
+                <dt> Context </dt>
+                <dd>{{context}}</dd>
               </div>
-          {{/article_name}}
+            {{/context}}
 
-          <div class="item">
-            <dt> Key </dt>
-            <dd>{{key}}</dd>
-          </div>
-          <div class="item">
-            <dt> Source </dt>
-            <dd>{{source}}</dd>
-          </div>
+            {{#article_name}}
+                <div class="item">
+                  <dt> Article </dt>
+                  <dd> <a href="{{article_url}}">{{article_name}}</a> </dd>
+                </div>
+            {{/article_name}}
 
-          {{#translator}}
             <div class="item">
-              <dt> Translated by </dt>
-              <dd>{{translator}}</dd>
+              <dt> Key </dt>
+              <dd>{{key}}</dd>
             </div>
-          {{/translator}}
+            <div class="item">
+              <dt> Source </dt>
+              <dd>{{source}}</dd>
+            </div>
 
-          {{#reviewer}}
-            {{#approved}}
-              <div class="item approved">
-                <dt> Approved by </dt>
-                <dd>{{reviewer}}</dd>
+            {{#translator}}
+              <div class="item">
+                <dt> Translated by </dt>
+                <dd>{{translator}}</dd>
               </div>
-            {{/approved}}
-            {{^approved}}
-              <div class="item rejected">
-                <dt> Rejected by </dt>
-                <dd>{{reviewer}}</dd>
-              </div>
-            {{/approved}}
-          {{/reviewer}}
+            {{/translator}}
 
-          <div class="item fuzzy-matches">
-          </div>
-        </dl>
+            {{#reviewer}}
+              {{#approved}}
+                <div class="item approved">
+                  <dt> Approved by </dt>
+                  <dd>{{reviewer}}</dd>
+                </div>
+              {{/approved}}
+              {{^approved}}
+                <div class="item rejected">
+                  <dt> Rejected by </dt>
+                  <dd>{{reviewer}}</dd>
+                </div>
+              {{/approved}}
+            {{/reviewer}}
 
+            <div class="item fuzzy-matches">
+            </div>
+          </dl>
+        {{/read_only_mode}}
       </div>
     </div>
   </div>
