--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -19,3 +19,6 @@
 
 = render partial: 'home/items', locals: { item_type: 'commit', items: @commits }
 = render partial: 'home/items', locals: { item_type: 'article', items: @articles }
+
+- if Shuttle::Configuration.workbench.show_article_groups
+  = render partial: 'home/items', locals: { item_type: 'group', items: @groups}
