Update with review feedbacks.  - rename Translation.is_shared to shared?  - rename LocaleProjectsShowPresenter.is_group to group?

--- a/app/views/locale/projects/show.js.coffee.erb
+++ b/app/views/locale/projects/show.js.coffee.erb
@@ -58,5 +58,5 @@ $(document).ready ->
     "<%= @presenter.role %>",
     JSON.parse("<%= Shuttle::Configuration.workbench.enable_reasons %>"),
     JSON.parse('<%= @presenter.edit_approved? %>'),
-    JSON.parse('<%= @presenter.is_group? %>')
+    JSON.parse('<%= @presenter.group? %>')
   )
