--- a/app/views/home/_items.slim
+++ b/app/views/home/_items.slim
@@ -24,6 +24,8 @@ ruby:
     [true, t('controllers.home.commits.header')]
   when 'article'
     [true, t('controllers.home.articles.header')]
+  when 'asset'
+    [true, t('controllers.home.assets.header')]
   when 'group'
     [false, t('controllers.home.groups.header')]
   else
